# autonomous-analytics-platform

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .vercelignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/api/: index.py
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  business_insight_agent.py  chart_generator_agent.py  intent_agent.py  metadata_agent.py  planner_agent.py  python_analyst_agent.py  recommendation_agent.py  reflection_agent.py  registry.py  sql_generator_agent.py  sql_validator_agent.py  supervisor_agent.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/core/: config.py  exceptions.py  llm.py  logging.py  security.py  stub_llm.py
backend/app/database/: base.py  seed.py  session.py
backend/app/graphs/: builder.py  runner.py  state.py
backend/app/memory/: __init__.py  conversation.py  long_term.py  preferences.py  project.py  redis_client.py
backend/app/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  agent_execution.py  audit_log.py  chat.py  datasource.py  enums.py  feedback.py  message.py  project.py  prompt_version.py  report.py  user.py
backend/app/observability/: __init__.py  langfuse_client.py  metrics.py
backend/app/prompts/: business_insight.py  chart_generator.py  intent.py  metadata.py  planner.py  python_analyst.py  recommendation.py  reflection.py  sql_generator.py  sql_validator.py  supervisor.py
backend/app/repositories/: __init__.py  agent_execution_repo.py  audit_log_repo.py  base.py  chat_repo.py  datasource_repo.py  feedback_repo.py  message_repo.py  project_repo.py  prompt_version_repo.py  report_repo.py  user_repo.py
backend/app/schemas/: analysis.py  auth.py  chat.py  common.py  datasource.py  project.py  report.py  user.py
backend/app/services/: __init__.py  analytics_service.py  audit_service.py  (+7 more)
backend/tests/: conftest.py
(+119 files in other folders)
