[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eaap-backend"
version = "0.1.0"
description = "Enterprise Autonomous Analytics Platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "qdrant-client>=1.9",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-community>=0.2",
    "langgraph>=0.1",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-google-genai>=1.0",
    "langchain-groq>=0.1",
    "langfuse>=2.36",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "openpyxl>=3.1",
    "matplotlib>=3.9",
    "reportlab>=4.2",
    "python-docx>=1.1",
    "sqlparse>=0.5",
    "tenacity>=8.3",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "B008",   # FastAPI Depends() in argument defaults is intentional
    "UP042",  # keep explicit (str, Enum) for broad tooling compatibility
    "UP046",  # keep Generic[T] base classes (clearer than PEP 695 syntax here)
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
